# clinkz-wot

./: .gitignore  AGENTS.md  ARCHITECTURE_GOVERNANCE.md  Cargo.toml  PLAN.md  PROJECT_GOVERNANCE.md  PROJECT_STATE.md  README.md  README.org
LICENSES/: MIT.txt
clinkz-wot/: Cargo.toml
clinkz-wot-binding-core/: Cargo.toml
clinkz-wot-binding-core/src/: error.rs  form.rs  lib.rs
clinkz-wot-core/: Cargo.toml
clinkz-wot-td/: Cargo.toml
clinkz-wot-td/src/: affordance.rs  components.rs  context.rs  data_schema.rs  data_type.rs  form.rs  lib.rs  link.rs  security_schema.rs  security_scheme.rs  td_defaults.rs  thing.rs  thing_model.rs  util.rs  validate.rs
clinkz-wot-td/src/components/: affordance.rs  context.rs  data_schema.rs  form.rs  link.rs  security_scheme.rs
clinkz-wot-td/src/core/: data_type.rs
clinkz-wot-td/tests/: builder_extension_fields_test.rs  convenience_api_test.rs  uri_constraints_test.rs  validation_test.rs
clinkz-wot-td/tests/fixtures/: fujitsu-ledbulb.jsonld  siemens-Ventilator.td.jsonld
clinkz-wot/examples/: minimal_local.rs
clinkz-wot/src/: lib.rs
codecs/cbor/: Cargo.toml
codecs/cbor/src/: lib.rs
codecs/cbor/tests/: cbor_codec_test.rs
core/: Cargo.toml
core/src/: binding.rs  binding_facade.rs  error.rs  event.rs  identity.rs  inbound.rs  interaction.rs  lib.rs  outbound.rs  payload.rs  security.rs  status.rs  sync.rs  thing.rs  transport.rs
core/tests/: core_traits_test.rs  interaction_output_test.rs
discovery/: Cargo.toml
discovery/src/: backend.rs  directory.rs  discoverer.rs  embedded.rs  endpoint.rs  error.rs  host.rs  lib.rs  local.rs  publisher.rs  query.rs  resolver.rs  scripting.rs  session.rs  storage.rs  watch.rs
discovery/src/backend/: memory.rs
discovery/tests/: discovery_test.rs  in_memory_directory_test.rs  scripting_discover_test.rs
docs/: api-ownership.csv  artifacts.csv  clinkz-platform-context.md  deferred-design-followups.md  design.md  governance.toml  no-std-embedded.md  protocol-bindings.md  refactor-gates.csv  requirements.csv  resource-limits.csv  servient-workflow.md  state-machines.toml  td-1.1-field-coverage.md  td-api-convenience.md  technical-spec.md  user-facing-api.md  verification.md  wot-compliance.md  wot-td-development-plan.md  zenoh-pico-c-abi-integration-target.md  zenoh-pico-runtime-target.md  zenoh-runtime-integration-test.md
foundation/: Cargo.toml  build.rs
foundation/examples/: no_std_surface.rs
foundation/src/: budget.rs  generation.rs  lib.rs  resource.rs  time.rs
foundation/tests/: resource_policy_ownership.rs
protocol-bindings/core/: Cargo.toml
protocol-bindings/core/src/: error.rs  error_status.rs  form.rs  lib.rs  uri_template.rs
protocol-bindings/core/tests/: form_selection_test.rs
protocol-bindings/protocols/zenoh/: Cargo.toml
protocol-bindings/protocols/zenoh/src/: error.rs  form.rs  lib.rs  protocol_binding.rs  runtime.rs  server.rs  zenoh.rs
protocol-bindings/protocols/zenoh/src/runtime/: pool.rs  selector.rs  zenoh-pico.rs  zenoh.rs  zenoh_pico.rs
protocol-bindings/protocols/zenoh/src/runtime/zenoh/: metadata.rs  sample.rs  selector.rs
protocol-bindings/protocols/zenoh/tests/: runtime_zenoh_pico_test.rs  runtime_zenoh_smoke_test.rs  server_binding_smoke_test.rs  zenoh_form_test.rs  zenoh_protocol_binding_test.rs
scripts/: check-baseline.sh  check-embedded.sh  check-feature-matrix.sh  check-m7.sh  check-no-std.sh  check-reserved-features.sh  check-td2-preview.sh
servient/: Cargo.toml
servient/src/: builder.rs  cache.rs  consumed.rs  embedded.rs  error.rs  handle.rs  host.rs  interaction.rs  lib.rs  lock.rs  registry.rs  runtime.rs  servient.rs
servient/src/servient/: bulk.rs  dispatch.rs  driving_async.rs  driving_sync.rs  security.rs
servient/tests/: consumed_streaming_test.rs  error_tree_test.rs  exposed_async_test.rs  protocol_binding_test.rs  security_wiring_test.rs  servient_async.rs  servient_lock_split.rs  servient_runtime_test.rs  servient_test.rs  servient_zenoh.rs
servient/tests/servient_runtime_test/: main.rs
servient/tests/servient_test/: main.rs  support.rs
servient/tests/support/: mod.rs
td/: Cargo.toml
td/src/: components.rs  flat.rs  lib.rs  rfc3339.rs  td_defaults.rs  thing.rs  thing_model.rs  validate.rs
td/src/components/: affordance.rs  context.rs  data_schema.rs  form.rs  link.rs  security_scheme.rs  util.rs
td/src/core/: data_type.rs
td/src/core/data_type/: metadata.rs  operation.rs  response.rs  uri.rs  version.rs
td/tests/: all-td-impl.json  builder_extension_fields_test.rs  td_defaults_test.rs  thing_model_test.rs  uri_constraints_test.rs  validation_test.rs
td/tests/fixtures/: clinkz-extension-defaults.td.jsonld  directory.td.jsonld  uri-template-targets.td.jsonld
tools/: check-api-ownership.sh  check-architecture-adrs.sh  check-design-artifacts.sh  check-design-requirements.sh  check-directory-client-scope.sh  check-resource-limits.sh  check-wp-000.sh  check-wp-100-error-surface.sh  check-wp100-amendment.sh  check-wp100-foundation-refresh.sh  check-wp100-handler-amendment.sh  check-wp100-handler-value-primitives-entry.sh  check-wp100-handler-value-primitives.sh
tools/compile-contracts/wp100-handler-value-primitives/: Cargo.toml
tools/compile-contracts/wp100-handler-value-primitives/src/: lib.rs
tools/compile-contracts/wp100-handler-value-primitives/tests/: semantics.rs
tools/compile-contracts/wp100-handler-value-primitives/ui/: must-use-handler-step.rs  must-use-subscription-acceptance.rs  private-handler-footprint.rs  private-static-handler-registration.rs  private-subscription-acceptance.rs
workspace/: 0001-architecture-overview.org  0002-planning-context.org  0003-subscription-source-attribution.org  0004-implementation-readiness.org  0005-architecture-review-findings.md  0006-handler-entry-decomposition.md  0007-time-domain-and-deadline.md  0008-implementation-governance-overhead.md  0009-minimal-end-to-end-architecture-validation.md  0010-complete-design-decomposition.md  0011-subscription-receiver-ownership.md  INDEX.org  README.md  workspace-0004-implementation-readiness.org
(+118 files in other folders)
