[workspace]
resolver = "3"
members = ["clinkz-wot-td"]

[workspace.package]
name = "clinkz-wot"
version = "0.1.0"
edition = "2024"


[workspace.dependencies]
time = { version = "0.3", default-features = false }

serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false}
