[workspace]
resolver = "3"
members = [
    "core",
    "discovery",
    "protocol-bindings/core",
    "protocol-bindings/protocols/zenoh",
    "td",
]

[workspace.package]
version = "0.1.0"
edition = "2024"


[workspace.dependencies]
time = { version = "0.3", default-features = false }

serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
