[workspace]
resolver = "3"
members = [
    "clinkz-wot",
    "codecs/cbor",
    "core",
    "discovery",
    "protocol-bindings/core",
    "protocol-bindings/protocols/zenoh",
    "servient",
    "td",
    "tools/design-check",
    "tools/performance-harness",
]

[workspace.package]
version = "0.1.0"
edition = "2024"


[workspace.dependencies]
time = { version = "0.3", default-features = false }

serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }

async-trait = "0.1"
futures-core = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
