[package]
name = "clinkz-wot-core"
version.workspace = true
edition.workspace = true

[dependencies]
clinkz-wot-td = { path = "../td", default-features = false }
async-trait = { workspace = true, optional = true }
async-channel = { version = "2", optional = true }
critical-section = { version = "1", default-features = false }
futures-core = { workspace = true, optional = true }

[dev-dependencies]
futures-util = { version = "0.3", default-features = false, features = ["alloc", "async-await"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }

[features]
default = ["std"]
std = ["clinkz-wot-td/std", "critical-section/std", "dep:async-channel"]
async = ["dep:async-trait", "dep:futures-core"]
## Experimental TD 2.0 data-model surface (`ActionAffordance.synchronous`).
## Forwards to the `clinkz-wot-td` data model gate.
td2-preview = ["clinkz-wot-td/td2-preview"]
