[package]
name = "clinkz-wot-servient"
version.workspace = true
edition.workspace = true

[dependencies]
clinkz-wot-core = { path = "../core", default-features = false }
clinkz-wot-discovery = { path = "../discovery", default-features = false }
clinkz-wot-protocol-bindings = { path = "../protocol-bindings/core", default-features = false }
clinkz-wot-protocol-bindings-zenoh = { path = "../protocol-bindings/protocols/zenoh", default-features = false, optional = true }
clinkz-wot-td = { path = "../td", default-features = false }
serde_json = { workspace = true }
async-trait = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
tokio = { version = "1", optional = true, features = ["sync", "macros", "time"] }

[dev-dependencies]
clinkz-wot-codec-cbor = { path = "../codecs/cbor" }
serde_json = { version = "1" }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }

[features]
default = ["std"]
std = [
    "clinkz-wot-core/std",
    "clinkz-wot-discovery/std",
    "clinkz-wot-protocol-bindings/std",
    "clinkz-wot-td/std",
]
async = [
    "dep:async-trait",
    "dep:futures-util",
    "dep:tokio",
    "clinkz-wot-core/async",
]
multithread = ["clinkz-wot-core/multithread"]
test-zenoh = [
    "dep:clinkz-wot-protocol-bindings-zenoh",
    "clinkz-wot-protocol-bindings-zenoh/zenoh",
]
## Experimental TD 2.0 runtime surface (`cancelaction`, `subscribeallevents`,
## `unsubscribeallevents`). Forwards to the data-model and core gates.
td2-preview = [
    "clinkz-wot-td/td2-preview",
    "clinkz-wot-core/td2-preview",
]

[[test]]
name = "servient_zenoh"
path = "tests/servient_zenoh.rs"
required-features = ["test-zenoh"]
