[package]
name = "clinkz-wot-servient"
version.workspace = true
edition.workspace = true

[dependencies]
clinkz-wot-core = { path = "../core", default-features = false }
clinkz-wot-discovery = { path = "../discovery", default-features = false }
clinkz-wot-protocol-bindings = { path = "../protocol-bindings/core", default-features = false }
clinkz-wot-protocol-bindings-zenoh = { path = "../protocol-bindings/protocols/zenoh", default-features = false, optional = true }
clinkz-wot-td = { path = "../td", default-features = false }
log = { version = "0.4", default-features = false }
serde_json = { workspace = true }
async-trait = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
tokio = { version = "1", optional = true, features = ["sync", "macros", "time", "rt"] }

[dev-dependencies]
clinkz-wot-codec-cbor = { path = "../codecs/cbor" }
serde_json = { version = "1" }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }

[features]
default = ["std"]
## The Servient's std surface (driving loop, fan-in channel, host conveniences)
## is async, so `std` implies `async`.
std = [
    "async",
    "clinkz-wot-core/std",
    "clinkz-wot-discovery/std",
    "clinkz-wot-protocol-bindings/std",
    "clinkz-wot-td/std",
]
## Native-async driving primitives (`poll_serve`, `serve`). `std` implies this.
async = [
    "dep:async-trait",
    "dep:futures-util",
    "dep:tokio",
    "clinkz-wot-core/async",
    "clinkz-wot-discovery/async",
]
test-zenoh = [
    "dep:clinkz-wot-protocol-bindings-zenoh",
    "clinkz-wot-protocol-bindings-zenoh/zenoh",
]
## Experimental TD 2.0 data-model surface (`ActionAffordance.synchronous`).
## Forwards to the data-model gate.
td2-preview = [
    "clinkz-wot-td/td2-preview",
    "clinkz-wot-core/td2-preview",
]
