[package]
name = "clinkz-wot-servient"
version.workspace = true
edition.workspace = true

[dependencies]
clinkz-wot-core = { path = "../core", default-features = false }
clinkz-wot-discovery = { path = "../discovery", default-features = false }
clinkz-wot-protocol-bindings = { path = "../protocol-bindings/core", default-features = false }
clinkz-wot-protocol-bindings-zenoh = { path = "../protocol-bindings/protocols/zenoh", default-features = false, optional = true }
clinkz-wot-td = { path = "../td", default-features = false }
log = { version = "0.4", default-features = false }
serde_json = { workspace = true }
async-trait = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }

[dev-dependencies]
clinkz-wot-codec-cbor = { path = "../codecs/cbor" }
serde_json = { version = "1" }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }

[features]
default = ["std"]
## The Servient's std surface (ServientBuilder, host conveniences) is async,
## so `std` implies `async`.
std = [
    "async",
    "clinkz-wot-core/std",
    "clinkz-wot-discovery/std",
    "clinkz-wot-protocol-bindings/std",
    "clinkz-wot-td/std",
]
## Native-async Servient surface (consume/produce handles, async handler
## setters, async local dispatch). Driving is binding-owned; the Servient
## itself exposes only `Dispatch::serve_request` for bindings to call.
##
## This feature is the *async syntax surface* only (async-trait +
## futures-util): no_std-reachable. The tokio runtime is NOT pulled in here;
## it arrives via the `std` feature (host conveniences) or dev-dependencies
## (tests). See AGENTS.md / docs/no-std-embedded.md.
async = [
    "dep:async-trait",
    "dep:futures-util",
    "clinkz-wot-core/async",
    "clinkz-wot-discovery/async",
]
test-zenoh = [
    "dep:clinkz-wot-protocol-bindings-zenoh",
    "clinkz-wot-protocol-bindings-zenoh/zenoh",
]
## Experimental TD 2.0 data-model surface (`ActionAffordance.synchronous`).
## Forwards to the data-model gate.
td2-preview = [
    "clinkz-wot-td/td2-preview",
    "clinkz-wot-core/td2-preview",
]
