[package]
name = "clinkz-wot-td"
version.workspace = true
edition.workspace = true

[dependencies]
fluent-uri = { version = "0.4", features = ["alloc", "serde"], default-features = false }

time = { workspace = true, features = ["alloc", "macros", "serde-well-known", "quickcheck"] }

serde = { workspace = true, features = ["derive", "alloc"] }
serde_json = { workspace = true, features = ["alloc", "raw_value"] }
serde_with = { version = "3.18", features = ["macros", "alloc", "time_0_3"], default-features = false }

[features]
default = ["std"]
std = ["serde/std", "serde_json/std", "serde_with/std", "fluent-uri/std", "time/std"]
## Experimental, incomplete TD 2.0 data-model extensions.
##
## When enabled, TD 2.0 fields and behaviors are surfaced alongside the
## TD 1.1 defaults. The feature is intentionally additive and must not alter
## TD 1.1 round-trip fidelity when disabled.
td2-preview = []
