[package]
name = "clinkz-wot-td"
version.workspace = true
edition.workspace = true

[dependencies]
clinkz-wot-foundation = { path = "../foundation", default-features = false }
fluent-uri = { version = "0.4", features = ["alloc", "serde"], default-features = false }

# `quickcheck` is intentionally NOT enabled here: it pulls `getrandom`, which
# is unsupported on bare `no_std` targets and would break the crate's
# `no_std + alloc` guarantee. quickcheck-style property testing, if needed,
# belongs in dev-dependencies / a dedicated test feature.
# Only the `OffsetDateTime` type + its core accessors/constructors are used.
# `macros`/`serde`/`serde-well-known` are intentionally NOT enabled:
# `serde-well-known` pulls `formatting`+`parsing`, both of which hard-require
# `std` in `time` and would break this crate's `no_std + alloc` guarantee.
# RFC 3339 (de)serialization is handled by the in-tree `rfc3339` module.
time = { workspace = true, features = ["alloc"] }

serde = { workspace = true, features = ["derive", "alloc"] }
serde_json = { workspace = true, features = ["alloc", "raw_value"] }
# `time_0_3` is intentionally NOT enabled: this crate does not use any
# serde_with time converters (only `OneOrMany` / `serde_as` /
# `skip_serializing_none`), and enabling it would let `serde_with/std` forward
# `time/serde-well-known` + `time/std`, re-introducing the `std` dependency.
serde_with = { version = "3.18", features = ["macros", "alloc"], default-features = false }

[features]
default = ["std"]
std = [
    "clinkz-wot-foundation/std",
    "serde/std",
    "serde_json/std",
    "serde_with/std",
    "fluent-uri/std",
    "time/std",
]
## Experimental, incomplete TD 2.0 data-model extensions.
##
## When enabled, TD 2.0 fields and behaviors are surfaced alongside the
## TD 1.1 defaults. The feature is intentionally additive and must not alter
## TD 1.1 round-trip fidelity when disabled.
td2-preview = []
