[package]
name = "clinkz-wot-protocol-bindings-zenoh"
version.workspace = true
edition.workspace = true

[dependencies]
clinkz-wot-core = { path = "../../../core", default-features = false }
clinkz-wot-protocol-bindings = { path = "../../core", default-features = false }
clinkz-wot-td = { path = "../../../td", default-features = false }
serde_json = { workspace = true, features = ["alloc"] }
zenoh = { version = "1.9.0", optional = true }

[features]
default = ["std"]
std = [
    "clinkz-wot-core/std",
    "clinkz-wot-protocol-bindings/std",
    "clinkz-wot-td/std",
    "serde_json/std",
]
zenoh-runtime = ["std", "dep:zenoh"]
zenoh-pico-runtime = []
