[package]
name = "clinkz-wot-protocol-bindings-zenoh"
version.workspace = true
edition.workspace = true

[dependencies]
clinkz-wot-core = { path = "../../../core", default-features = false }
clinkz-wot-protocol-bindings = { path = "../../core", default-features = false }
clinkz-wot-td = { path = "../../../td", default-features = false }
serde_json = { workspace = true, features = ["alloc"] }
zenoh = { version = "1.9.0", optional = true }
async-trait = { workspace = true, optional = true }
tokio = { version = "1", optional = true, features = ["sync", "macros", "rt", "rt-multi-thread", "time"] }
log = "0.4"

[features]
default = ["zenoh"]
zenoh = [
    "clinkz-wot-core/std",
    "clinkz-wot-protocol-bindings/std",
    "clinkz-wot-td/std",
    "serde_json/std",
    "dep:zenoh",
]
async = [
    "dep:async-trait",
    "dep:tokio",
    "clinkz-wot-core/async",
]
zenoh-pico = []
