[package]
name = "clinkz-wot-protocol-bindings-zenoh"
version.workspace = true
edition.workspace = true

[dependencies]
clinkz-wot-core = { path = "../../../core", default-features = false }
clinkz-wot-protocol-bindings = { path = "../../core", default-features = false }
clinkz-wot-td = { path = "../../../td", default-features = false }
fluent-uri = { version = "0.4", features = ["alloc"], default-features = false }
serde_json = { workspace = true, features = ["alloc"] }
zenoh = { version = "1.9.0", optional = true }
async-trait = { workspace = true, optional = true }
tokio = { version = "1", optional = true, features = ["sync", "macros", "rt", "rt-multi-thread", "time"] }
log = "0.4"

[dev-dependencies]
clinkz-wot-servient = { path = "../../../servient" }

[features]
default = ["zenoh"]
zenoh = [
    "async",
    "clinkz-wot-core/std",
    "clinkz-wot-protocol-bindings/std",
    "clinkz-wot-td/std",
    "serde_json/std",
    "dep:zenoh",
    # tokio is the zenoh backend's driving runtime (server fan-in channel,
    # task spawn). It belongs to the concrete `zenoh` backend, NOT to the
    # `async` syntax surface — the latter must stay no_std-reachable.
    "dep:tokio",
]
# Async syntax surface for the binding (async-trait + core/async). Kept free
# of any runtime so a future no_std zenoh-pico async backend can reuse it.
async = [
    "dep:async-trait",
    "clinkz-wot-core/async",
]
zenoh-pico = []
## Experimental TD 2.0 data-model surface (`ActionAffordance.synchronous`).
## Forwards to the data-model and core gates.
td2-preview = [
    "clinkz-wot-td/td2-preview",
    "clinkz-wot-core/td2-preview",
]
